<resources>
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="ssdk_instapager_login_html" formatted="false">&lt;!DOCTYPE html> &lt;html> &lt;head> &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"> &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"> &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"> &lt;title>%s&lt;/title> &lt;style type=\"text/css\"> body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style> &lt;/head> &lt;body> &lt;script type=\"text/javascript\"> function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script> &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"> %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"> &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/> &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/> &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/> &lt;/div> &lt;p>&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/>&lt;/p> &lt;/form> &lt;/body> &lt;/html></string>
    <string name="ssdk_oks_share">Share</string>
    <string name="ssdk_oks_sharing">Sharing operation is working in the background…</string>
    <string name="ssdk_oks_share_failed">Operation failed</string>
    <string name="ssdk_oks_share_completed">Operation succeeded</string>
    <string name="ssdk_oks_share_canceled">Operation canceled</string>
    <string name="ssdk_oks_cancel">Cancel</string>
    <string name="ssdk_oks_multi_share">Photo Sharing</string>
    <string name="ssdk_oks_confirm">Confirm</string>
    <string name="ssdk_oks_contacts">Contacts</string>
    <string name="ssdk_oks_pull_to_refresh">Pull down to refresh</string>
    <string name="ssdk_oks_release_to_refresh">Release to refresh</string>
    <string name="ssdk_oks_refreshing">Refreshing…</string>
    <string name="ssdk_weibo_oauth_regiseter">Authorization</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_weibo_upload_content">Share Picture</string>
    <string name="ssdk_wechat_client_inavailable">Wechat client not exists or the version is too low</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ client not exists or the version is too low</string>
    <string name="ssdk_qq_client_inavailable">Mobile QQ client not exists or the version is too low</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest client not exists or the version is too low</string>
    <string name="ssdk_instagram_client_inavailable">Instagram client not exists or the version is too low</string>
    <string name="ssdk_yixin_client_inavailable">Yixin client not exists or the version is too low</string>
    <string name="ssdk_line_client_inavailable">Line client not exists or the version is too low</string>
    <string name="ssdk_kakaotalk_client_inavailable">KakaoTalk client not exists or the version is too low</string>
    <string name="ssdk_kakaostory_client_inavailable">KakaoStory client not exists or the version is too low</string>
    <string name="ssdk_whatsapp_client_inavailable">WhatsApp client not exists or the version is too low</string>
    <string name="ssdk_laiwang_client_inavailable">Laiwangs client not exists or the version is too low</string>
    <string name="ssdk_alipay_client_inavailable">Alipay client not exists or the version is too low</string>
    <string name="ssdk_facebookmessenger_client_inavailable">Facebookmessenger client not exists or the version is too low</string>
    <string name="ssdk_sinaweibo">Sina Weibo</string>
    <string name="ssdk_tencentweibo">Tencent Weibo</string>
    <string name="ssdk_qzone">QZone</string>
    <string name="ssdk_wechat">WeChat</string>
    <string name="ssdk_wechatmoments">WeChat Moments</string>
    <string name="ssdk_wechatfavorite">WeChat Favorites</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_renren">Renren</string>
    <string name="ssdk_kaixin">Kaixin</string>
    <string name="ssdk_email">Email</string>
    <string name="ssdk_shortmessage">Short Message</string>
    <string name="ssdk_sohumicroblog">Sohu Microblog</string>
    <string name="ssdk_neteasemicroblog">Netease Microblog</string>
    <string name="ssdk_douban">Douban</string>
    <string name="ssdk_youdao">Youdao</string>
    <string name="ssdk_evernote">Evernote</string>
    <string name="ssdk_linkedin">Linked in</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_sohusuishenkan">Sohu Suishenkan</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_yixin">Yixin</string>
    <string name="ssdk_yixinmoments">Yixin Moments</string>
    <string name="ssdk_mingdao">Mingdao</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_bluetooth">Bluetooth</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">Email</string>
    <string name="ssdk_instapaper_pwd">Password</string>
    <string name="ssdk_instapaper_login">Sign In</string>
    <string name="ssdk_instapaper_logining">Sign In…</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email or Password incorrect</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_laiwang">Laiwang</string>
    <string name="ssdk_laiwangmoments">Laiwang Moments</string>
    <string name="ssdk_alipay">Alipay</string>
    <string name="ssdk_share_to_qzone">Share To QZone</string>
    <string name="ssdk_share_to_qq">Share To QQ</string>
    <string name="ssdk_mingdao_share_content">Share webpage</string>
    <string name="ssdk_share_to_mingdao">Share To Mingdao</string>
    <string name="ssdk_share_to_qzone_default">Shared from AEE</string>
    <string name="ssdk_use_login_button">use login button instead</string>
    <string name="product_params">Spec</string>
    <string name="library_title">Library</string>
    <string name="connect">Connect</string>
    <string name="menu">Menu</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="legal_title">Legal</string>
    <string name="isconnected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="pleaseconnect">Please Connect Camera Wi-Fi</string>
    <string name="please_open_wifi">Please Open Camera Wi-Fi</string>
    <string name="connecting_notexit">Operation is not allowed during the connection</string>
    <string name="shop_link">http://www.aee.com</string>
    <string name="interval_warning">Do not support preview when interval</string>
    <string name="please_stop_record">Please Stop Record</string>
    <string name="please_stop_continous">Please Stop Continous</string>
    <string name="video_resolutions">Video Resolution</string>
    <string name="photo_resolution">Photo Resolution</string>
    <string name="photo_shot_mode">Photo Burst</string>
    <string name="setup_key_tone">Warning Tone</string>
    <string name="setup_selflamp">Status Indicators</string>
    <string name="setup_system_type">TV Output</string>
    <string name="dv_language">Camera Languages</string>
    <string name="setup_time">Date/Time</string>
    <string name="format">Format SD Card</string>
    <string name="nesignation">Restore Default</string>
    <string name="dv_version">Version:</string>
    <string name="wifi">WIFI</string>
    <string name="set_ssid">WiFi SSID Modification</string>
    <string name="set_psw">Wi-Fi Password Modification</string>
    <string name="wifi_name">Please Input WiFi Name</string>
    <string name="wifi_pwd">Please Input WiFi Password</string>
    <string name="wifi_pwd_confirm">Confirm the WIFI password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="camera_lib">Camera Library</string>
    <string name="local_lib">Local Library</string>
    <string name="library_selectAll">Select All</string>
    <string name="share">Share</string>
    <string name="library_delete">Select File to Delete</string>
    <string name="pic_video_download">Download</string>
    <string name="appsetting_wifipswchange">Change WiFi Password</string>
    <string name="appsetting_firmwareupdate">Firmware Update</string>
    <string name="register_name">Name</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="register_address">Address</string>
    <string name="register_city">City</string>
    <string name="register_zipcode">Zip Code</string>
    <string name="register_state">State</string>
    <string name="register_country">Country</string>
    <string name="register_next">Next</string>
    <string name="register_submit">Submit</string>
    <string name="register_product">Product Info</string>
    <string name="register_buydate">Purchase Date</string>
    <string name="register_productinfo">Where did you purchase your AEE product?</string>
    <string name="register_buyfromwhere">Fill in your Answer</string>
    <string name="register_productmode">Model Number</string>
    <string name="register_productserial">Product Serial Number</string>
    <string name="register_receipt">Upload Receipt</string>
    <string name="register_privacy">By Clicking Submit You Agree To Our Terms and Privacy Policy</string>
    <string name="register_receiptchoose">Choose</string>
</resources>