<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_wifi_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/wifi_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_wifi_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_wifi_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_pwd_confirm"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
