<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_wifipsw_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/appsetting_wifipswchange"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_new_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_pwd_confirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_wifi_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save" />
</LinearLayout>
