<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/register_product" />
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <EditText android:background="#ffffffff" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/register_buydate" />
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/register_productinfo" />
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <EditText android:background="#ffffffff" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/register_buyfromwhere" />
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_productmode" android:layout_weight="1.0" />
        <View android:background="#ffadaaad" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_productserial" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip">
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/register_receipt" android:layout_centerVertical="true" />
        <TextView android:textColor="#ffb2b2b2" android:background="@drawable/register_btn_shape" android:paddingLeft="66.0dip" android:paddingTop="10.0dip" android:paddingRight="66.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_receiptchoose" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="12.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/register_privacy" />
    <TextView android:textSize="18.0sp" android:textColor="#ffff0000" android:layout_gravity="center_horizontal" android:id="@+id/tv_submit" android:background="@drawable/register_btn_shape" android:paddingLeft="120.0dip" android:paddingTop="10.0dip" android:paddingRight="120.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/register_submit" />
</LinearLayout>
