<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/register_name" />
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_firstname" android:layout_weight="1.0" />
        <View android:background="#ffadaaad" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_lastname" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <TextView android:textSize="18.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/register_address" />
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_city" android:layout_weight="1.0" />
        <View android:background="#ffadaaad" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_zipcode" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_state" android:layout_weight="1.0" />
        <View android:background="#ffadaaad" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <EditText android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="5.0dip" android:hint="@string/register_country" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffadaaad" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <TextView android:textSize="18.0sp" android:textColor="#ffff0000" android:layout_gravity="center_horizontal" android:id="@+id/tv_next" android:background="@drawable/register_btn_shape" android:paddingLeft="120.0dip" android:paddingTop="10.0dip" android:paddingRight="120.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/register_next" />
</LinearLayout>
