<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ff414042" android:scrollbars="none" android:layout_width="190.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu" />
        <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:id="@+id/tv_shop" android:text="@string/shop" android:drawableLeft="@drawable/shop" android:drawablePadding="24.0dip" style="@style/tab_style" />
        <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:id="@+id/tv_setting" android:text="@string/settings" android:drawableLeft="@drawable/settings" style="@style/tab_style" />
        <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:id="@+id/tv_support" android:text="@string/support" android:drawableLeft="@drawable/icon_support" android:drawablePadding="22.0dip" style="@style/tab_style" />
        <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:id="@+id/tv_legal" android:layout_marginLeft="2.0dip" android:text="@string/legal_title" android:drawableLeft="@drawable/icon_legal" android:drawablePadding="24.0dip" style="@style/tab_style" />
        <View android:id="@+id/lastview" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    </LinearLayout>
</ScrollView>
