<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/iv_library_back"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:padding="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/library_title"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/rl_camera_lib"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_connect"
        android:gravity="center"
        android:text="@string/camera_lib"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rl_local_lib"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_connect"
        android:gravity="center"
        android:text="@string/local_lib"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />
</LinearLayout>
